(Sarif) Install Rose/Sarif.h; fixed CodeFlow & ThreadFlow errors
* The <Rose/Sarif.h> file wasn't installed by any of the build
  systems.

* The CodeFlow, ThreadFlow, and ThreadFlowLocation had YAML generation
  errors.

RPM-634

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -594,6 +594,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/metaprog.h									\
 	Rose/Progress.h									\
 	Rose/RecursionCounter.h								\
+	Rose/Sarif.h									\
 	Rose/Sarif/Analysis.h								\
 	Rose/Sarif/Artifact.h								\
 	Rose/Sarif/BasicTypes.h								\
